# APICRUD

./: .env  .gitignore  README.md  crud.py  db.py  dbconntest.py  main.py  pyproject.toml  schemas.py
bcknd/: crud.py  db.py  main.py  mydatabase.db  pyproject.toml  test.db
frntnd/: package-lock.json  package.json
frntnd/src/: App.jsx
