[project]
name = "pgtry"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi>=0.135.1",
    "pydantic[email]>=2.12.5",
    "psycopg2-binary>=2.9.0",
    "sqlalchemy>=2.0.48",
    "uvicorn>=0.41.0",
]
